--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %\RequirePackage{kvoptions-patch}
 \documentclass[14pt, a4paper, twoside, bibliography=totoc, headsepline, cleardoublepage=empty, parskip=half, draft=false]{scrbook}
-
+\DeclareUnicodeCharacter{2080}{$_{0}$}
 
 \let\ifdeutsch\iffalse
 \let\ifenglish\iftrue
