--- a/content.tex
+++ b/content.tex
@@ -888,6 +888,26 @@ The eye-tracking study (offline study) was conducted at LMU, Munich. As eye-trac
 
 
 \subsection{Research Variables}
+To evaluate the study, two types of variables are used - independent variables and dependent variables.
+
+\subsubsection{Independent variables}
+
+The independent variables in the study are variables that are manipulated. In the study there are used two independent variables - Commenting format and Indentation level.
+
+\begin{enumerate}
+     \item Commenting format: The key role of this independent variable is to investigate how commenting format influences code comprehension. This variable consists of four different types: None (no comments are included in the code), Minimal (these comments include only essential information), Helpful (these comments provide meaningful explanations), Redundant (These comments explain obvious parts of the code). 
+
+    \item Indentation level: The key role of this independent variable is to investigate how indentation influences code comprehension and readability. This variable consists of four different types: No indentation (The code has no indentation), 4-spaces indentation (the code has four spaces indentation), Random indentation (the code has inconsistent indentation). 
+\end{enumerate}
+
+\subsubsection{Dependent variables}
+
+The independent variables influence the dependent variables. The dependent variables are measured and the outcomes help to investigate how the independent variables influence code comprehension, commenting format, indentation level and cognitive load.  
+
+Comprehension score: This variable was derived from Question 3: "How understandable is the code for you?" Participants rate the code on a Likert scale, where 1 = "Not understandable" and  5 = "Very understandable". 
+Comment quality score: This variable variable was derived from Question 4: "How do you assess the commenting of the code?" Participants rate the code on a Likert scale, where 1 = "Confusing"  and 5  = "Very helpful". 
+Indentation Quality Score: This variable variable was derived from Question 5: "How do you assess the indentation of the code?" Participants rate the indentation of the code on  a Likert scale , where 1 = "Unreadable"  and 5 = "Very easy to read". 
+Response time per code snippet: This variable measures how long (in minutes) each participant took to view a code snippet and answer its corresponding five questions. 
 
 
 
@@ -961,6 +981,7 @@ The eye-tracking study (offline study) and the online study without eye-tracking
     Participants are asked to give feedback on the difficulty level of the code snippets. Furthermore, the students mentioned their opinions on code readability and code comprehension. Additionally, they shared the challenges they faced during the eye-tracking study.
 
 \end{enumerate}
+
 
 
 \subsection{Procedure for the Online Study without Eye-Tracking}
