--- a/content.tex
+++ b/content.tex
@@ -902,12 +902,29 @@ The independent variables in the study are variables that are manipulated. In th
 
 \subsubsection{Dependent variables}
 
-The independent variables influence the dependent variables. The dependent variables are measured and the outcomes help to investigate how the independent variables influence code comprehension, commenting format, indentation level and cognitive load.  
+The independent variables influence the dependent variables. The dependent variables are measured and the outcomes help to investigate how the independent variables influence code comprehension, commenting format, indentation level and cognitive load.  In this thesis are used the following dependent variables: Comprehension score, Comment quality score, Indentation quality score, Response time per code snippet..... An overview is
+presented in Table ... 
 
-Comprehension score: This variable was derived from Question 3: "How understandable is the code for you?" Participants rate the code on a Likert scale, where 1 = "Not understandable" and  5 = "Very understandable". 
-Comment quality score: This variable variable was derived from Question 4: "How do you assess the commenting of the code?" Participants rate the code on a Likert scale, where 1 = "Confusing"  and 5  = "Very helpful". 
-Indentation Quality Score: This variable variable was derived from Question 5: "How do you assess the indentation of the code?" Participants rate the indentation of the code on  a Likert scale , where 1 = "Unreadable"  and 5 = "Very easy to read". 
-Response time per code snippet: This variable measures how long (in minutes) each participant took to view a code snippet and answer its corresponding five questions. 
+
+\begin{table}[ht]
+\centering
+\small
+\begin{tabular}{|p{4cm}|p{10cm}|}
+\hline
+\textbf{Variable} & \textbf{Description} \\
+\hline
+Comprehension score & This variable was derived from Question 3: "How understandable is the code for you?" Participants rate the code on a Likert scale, where 1 = "Not understandable" and  5 = "Very understandable".  \\
+\hline
+Comment quality score & This variable variable was derived from Question 4: "How do you assess the commenting of the code?" Participants rate the code on a Likert scale, where 1 = "Confusing" and 5  = "Very helpful". \\
+\hline
+Indentation quality score & This variable variable was derived from Question 5: "How do you assess the indentation of the code?" Participants rate the indentation of the code on  a Likert scale , where 1 = "Unreadable" and 5 = "Very easy to read". \\
+\hline
+Response time per code snippet & This variable measures how long (in minutes) each participant took to view a code snippet and answer its corresponding five questions.  \\
+\hline
+\end{tabular}
+\caption{Description of variables used in the study}
+\label{tab:variables}
+\end{table}
 
 
 
@@ -1000,16 +1017,6 @@ The eye-tracking study (offline study) and the online study without eye-tracking
 \end{enumerate}
 
 
-
-
-
-
-\section{Measurements}
-
-\section{Participants}
-
-textetx
-
 \begin{figure} [H]
   \centering
   \includegraphics[scale=0.2]{figures/user.jpg}
@@ -1019,6 +1026,9 @@ textetx
 
 
 
+
+
+\section{Measurements}
 
 
 \section{Ethical Considerations}
@@ -1080,56 +1090,67 @@ As for Java knowledge, most students rated their skills as average. Only two par
 \end{figure}
 
 
+\section{Code snippets}
+how many are answered...
+
 \section{Indentation}
-To investigate whether code indentation improves code readability, one-sided Mann-Whitney U tests were conducted. Participants rated the readability of all code snippets on a 5-point Likert scale, where 1 = Unreadable and 5 = Very easy to read. (The question posed to participants was: "How do you assess the indentation of the code?")
-
-A Mann-Whitney U test was conducted to investigate whether 4-space indentation improves code readability compared to no indentation. The hypotheses were defined as: H0 (Null Hypothesis): The perceived readability of the 4-space indented code snippet is less than or equal to that of the unindented code. H1 (Alternative Hypothesis): The perceived readability of the 4-space indented code snippet is greater than that of the unindented code.
+To investigate whether code indentation improves code readability, one-sided Mann-Whitney U tests were conducted. 
 
 
-The test produced a p-value of \(9.172 \times 10^{-8}\), which is below the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H0) was rejected. This result reveals that students perceived the 4-space indented code snippet as significantly more readable than the unindented version. Figure .... presents the medians for both level of indentation.
+
+\subsection{Indentation quality score}
+
+
+Mann-Whitney U test was conducted to investigate whether 4-space indentation improves code readability compared to no indentation. The analysis was based on the Indentation quality score. The hypotheses were defined as:  H0 (Null Hypothesis): The Indentation quality score for the 4-space indented code snippet is less than or equal to that of the unindented code. H1(Alternative Hypothesis): The Indentation quality score for the 4-space indented code snippet is greater than that of the unindented code.
+
+Figure .... presents the medians for both level of indentation. The test produced a p-value of \(9.172 \times 10^{-8}\), which is below the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H0) was rejected. This result indicates that the Indentation quality score for the 4-space indented code was significantly higher than that for the unindented code. 
 
 \begin{figure} [H]
   \centering
   \includegraphics[scale=0.4]{figures/4-0-q5png.png}
-  \caption{4-space indentation median and No indentation median}
+  \caption{Indentation quality score: 4-space indentation median and No indentation median}
   \label{fig:AnhangsChor}
 \end{figure}
 
 
-Another Mann-Whitney U test was conducted to investigate whether 4-space indentation improves code readability compared to random indentation. The hypotheses were defined as:
-H0 (Null Hypothesis): The perceived readability of the 4-space indented code snippet is less than or equal to that of the randomly indented code. H1 (Alternative Hypothesis): The perceived readability of the 4-space indented code snippet is greater than that of the randomly indented code.
+Another Mann-Whitney U test was conducted to investigate whether 4-space indentation improves code readability compared to random indentation. The analysis was based on the Indentation quality score. The hypotheses were defined as:  H0 (Null Hypothesis): The Indentation quality score for the 4-space indented code snippet is less than or equal to that of the randomly indented code. H1 (Alternative Hypothesis): The Indentation quality score for the 4-space indented code snippet is greater than that of the randomly indented code.
 
-The test produced a p-value of 0.0008, which is below the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H₀) was rejected. The result reveals that students perceived the 4-space indented code snippet as significantly more readable than the code with random indentation. Figure .... presents the medians for both level of indentation.
+
+Figure .... presents the medians for both level of indentation. 
+The test produced a p-value of 0.0008, which is below the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H₀) was rejected. The result reveals that the Indentation quality score for the 4-space indented code was significantly higher than for the randomly indented code.
 
 \begin{figure} [H]
   \centering
   \includegraphics[scale=0.4]{figures/4-r-q5.png}
-  \caption{4-space indentation median and Random indentation median}
+  \caption{Indentation quality score: 4-space indentation median and Random indentation median}
   \label{fig:AnhangsChor}
 \end{figure}
 
 
-Another Mann-Whitney U test was conducted to investigate whether random indentation improves the readability of code compared to code with no indentation. The hypotheses were defined as: H0 (Null Hypothesis): The perceived readability of the code snippet with random indentation is less than or equal to that of the code snippet with no indentation.
-H1 (Alternative Hypothesis): The perceived readability of the code snippet with random indentation is greater than that of the code snippet with no indentation.
+Another Mann-Whitney U test was conducted to investigate whether random indentation improves the readability of code compared to code with no indentation. The analysis was based on the Indentation quality score. The hypotheses were defined as:  H0 (Null Hypothesis): The Indentation quality score for the randomly indented code snippet is less than or equal to that of the code snippet with no indentation.  H1(Alternative Hypothesis): The Indentation quality score for the randomly indented code snippet is greater than that of the code snippet with no indentation.
 
-The test yielded a p-value of 0.02145, which is less than the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H₀) was rejected. The result reveals that students perceived the code with random indentation  as significantly more readable than code with no indentation. Figure .... presents the medians for both level of indentation.
+Figure .... presents the medians for both level of indentation. 
+The test produced a p-value of  0.02145, which is less than the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H₀) was rejected. The result reveals that the Indentation quality score for the randomly indented code was significantly higher than that of the unindented code.
 
 \begin{figure} [H]
   \centering
   \includegraphics[scale=0.4]{figures/r-0-q5.png}
-  \caption{ Random indentation median and No indentation median}
+  \caption{Indentation quality score: Random indentation median and No indentation median}
   \label{fig:AnhangsChor}
 \end{figure}
 
 
-Another Mann-Whitney U test was conducted to investigate whether random indentation improves the understandability of code compared to code with no indentation. Participants rated the understandability of all code snippets using a 5-point Likert scale, where the 1 =  Very incomprehensible and 5 = Very understandable.  The hypotheses were defined as: H0 (Null Hypothesis): The perceived understandability of the code snippet with no indentation is equal to that of the randomly indented code snippet. H1 (Alternative Hypothesis): The perceived understandability of the code snippet with no indentation is not equal to that of the randomly indented code snippet.
+\subsection{Comprehension score}
+Another Mann-Whitney U test was conducted to investigate whether random indentation improves the comprehension  of code compared to code with no indentation. The analysis was based on the Comprehension score. The hypotheses were defined as: H0 (Null Hypothesis): The Comprehension score for the code snippet with no indentation is equal to that of the randomly indented code snippet. H1 (Alternative Hypothesis): The Comprehension score for the code snippet with no indentation is not equal to that of the randomly indented code snippet.
 
-The test produced a p-value of 0.1292, which is greater than the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H0) cannot be rejected. It is suggests that the difference between both levels of indentation is not statistically significant. Figure .... presents the medians for both level of indentation.
+Figure .... presents the medians for both level of indentation.
+The test produced a p-value of 0.1292, which is greater than the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H0) cannot be rejected. This result reveals that the difference in Comprehension score between the randomly indented and unindented code snippets was not statistically significant.
+
 
 \begin{figure} [H]
   \centering
   \includegraphics[scale=0.4]{figures/0-r-q3.png}
-  \caption{ Perceived understandability: No indentation median and Random indentation median}
+  \caption{Comprehension score:  No indentation median and Random indentation median}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -1149,30 +1170,77 @@ When participants were asked how they handle code indentation, several answers w
 \section{Comments}
 
 
-To investigate whether code indentation improves code understandability, one-sided Mann-Whitney U tests were conducted. Participants rated the understandability of all code snippets using a 5-point Likert scale, where 1 = Confusing and 5 = Helpful (corresponding question: "How do you assess the commenting of the code?").
+To investigate whether code indentation improves code understandability, one-sided Mann-Whitney U tests were conducted. 
 
-A test was conducted to investigate whether code snippet with helpful comments improves code understandability compared to code with no comments. The hypotheses were defined as:
-H0(Null Hypothesis): The perceived understandability of the code snippet with helpful comments is less than or equal to that of the code with no comments. H1 (Alternative Hypothesis): The perceived understandability of the code snippet with helpful comments is greater than that of the code with no comments.
+\subsection{Comment quality score}
 
-The test produced a p-value of 3.285e-10, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected. This result reveals that participants perceived the code snippet with helpful comments as significantly more understandable than the code with no comments. Figure .... presents the medians for both comments formats.
+To investigate whether helpful comments improve the comment quality of the code compared to no comments, a Mann-Whitney U test was conducted.  The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with helpful comments is less than or equal to that of the code with no comments.  H1 (Alternative Hypothesis): The Comment quality score for the code snippet with helpful comments is greater than that of the code with no comments.
+
+Figure .... presents the medians for both comments formats.
+The test produced a p-value of 3.285e-10, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with no comments.
 
 \begin{figure} [H]
   \centering
-  \includegraphics[scale=0.4]{figures/h-0-q4.png}
-  \caption{ Perceived understandability: Helpful comments median and No comments median}
+  \includegraphics[scale=0.5]{figures/h-0-q4.png}
+  \caption{Comment quality score: Helpful comments median and No comments median}
+  \label{fig:AnhangsChor}
+\end{figure}
+
+
+A Mann-Whitney U test was conducted to investigate whether helpful comments improve the comment quality of the code compared to minimal comments. The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with helpful comments is less than or equal to that of the code with minimal comments.  H1 (Alternative Hypothesis): The Comment quality score for the code snippet with helpful comments is greater than that of the code with minimal comments. The test produced a p-value of 0.02415, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with minimal comments.
+
+
+
+
+
+To investigate whether helpful comments improve the comment quality of the code compared to redundant comments, a Mann-Whitney U test was conducted.  The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with helpful comments is less than or equal to that of the code with redundant comments.  H1 (Alternative Hypothesis): The Comment quality score for the code snippet with helpful comments is greater than that of the code with redundant comments. The test produced a p-value of 0.02155,, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with redundant comments. 
+
+
+
+A Mann-Whitney U test was conducted to investigate whether minimal comments have an impact on the comment quality of the code compared to redundant comments. The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with minimal comments is equal to that of the code snippet with redundant comments. H1 (Alternative Hypothesis): The Comment quality score for the code snippet with minimal comments is not equal to that of the code snippet with redundant comments.  The test produced a p-value of 0.6443, which is greater than the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) cannot be rejected. This result reveals that the difference in Comment quality score between minimal comments code snippet and the redundant comments code snippet populations is not big enough to be statistically significant.
+
+
+\subsection{Comprehension score}
+A test was conducted to investigate whether code snippet with helpful comments improves code comprehension compared to code with no comments. H0 (Null Hypothesis): The Comprehension score for the code snippet with helpful comments is less than or equal to that of the code with no comments.  H1 (Alternative Hypothesis): The Comprehension score for the code snippet with helpful comments is greater than that of the code with no comments.
+
+
+Figure .... presents the medians for both comments formats.
+The test produced a p-value of 0.00006, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected.  This result reveals that the Comprehension score for the code with helpful comments was significantly higher than that for the code with no comments. 
+
+
+\begin{figure} [H]
+  \centering
+  \includegraphics[scale=0.4]{figures/h-0-q3.png}
+  \caption{Comprehension score:  Helpful comments median and No comments median}
   \label{fig:AnhangsChor}
 \end{figure}
 
 
 
 
+A test was conducted to investigate whether code snippet with helpful comments improves code comprehension compared to code with minimal comments. H0 (Null Hypothesis): The Comprehension score for the code snippet with helpful comments is less than or equal to that of the code with minimal comments.  H1 (Alternative Hypothesis): The Comprehension score for the code snippet with helpful comments is greater than that of the code with minimal comments.
 
+Figure .... presents the medians for both comments formats.
+The test indicates a p-value of 0.00037, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected.  This test reveals that the Comprehension score for the code with helpful comments was significantly higher than that for the code with minimal comments. 
+
+\begin{figure} [H]
+  \centering
+  \includegraphics[scale=0.4]{figures/h-m-q3.png}
+  \caption{Comprehension score:  Helpful comments median and Minimal comments median}
+  \label{fig:AnhangsChor}
+\end{figure}
 
 
 
 When participants were asked what characterizes well-commented code for them, their responses indicated common opinions. They think comments should explain what the code does. Moreover, the comments should provide the purpose and not to repeat the obvious. Participants generally agree on what makes code badly commented. They think it is problematic when comments are missing. Another issue is over-commenting, where every single line is explained.
 When participants were asked how often they follow their own guidelines when writing code comments, most participants answered they do so sometimes. Figure …. shows the results.
 
+\begin{figure} [H]
+  \centering
+  \includegraphics[scale=1.1]{figures/comAt.png}
+  \caption{Paying attention to writing comments }
+  \label{fig:AnhangsChor}
+\end{figure}
 
 
 \chapter{Discussion - Interpretation of Results}
