--- a/bibliography.bib
+++ b/bibliography.bib
@@ -687,3 +687,17 @@ doi = {10.1109/EDUCON60312.2024.10578672}
   year={1995},
   publisher={IEEE}
 }
+
+@Inbook{MacFarland2016,
+author="MacFarland, Thomas W.
+and Yates, Jan M.",
+title="Mann--Whitney U Test ",
+bookTitle="Introduction to Nonparametric Statistics for the Biological Sciences Using R",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="103--132",
+isbn="978-3-319-30634-6",
+doi="10.1007/978-3-319-30634-6_4",
+url="https://doi.org/10.1007/978-3-319-30634-6_4"
+}
