--- a/main.tex
+++ b/main.tex
@@ -54,12 +54,6 @@
 %auch im Stil vom Inhaltsverzeichnis
 \section*{Kurzfassung}
 
-\todo{Short summary of the thesis. Here, the following questions should be answered:}
-\todo{What is the specific problem addressed?}
-\todo{What have you done?}
-\todo{What did you find out?}
-\todo{What are the implications on a larger scale?}
-\todo{Should be around 0.5 pages. Not longer than 1 page.}
 
 \cleardoublepage
 
@@ -178,6 +172,8 @@ All links were last followed on \today{}.
 
 \appendix
 \input{latexhints/latexhints-english}
+\input{appendix}
+
 
 \pagestyle{empty}
 \renewcommand*{\chapterpagestyle}{empty}
